--- a/basic-model.ipynb
+++ b/basic-model.ipynb
@@ -250,13 +250,98 @@
     "        r: int = 0, # Low-rank 차원\n",
     "        lora_alpha: int = 1, # LoRA 스케일링 계수\n",
     "        lora_dropout: float = 0., # 드롭아웃 확률\n",
-    "        fan_in_fan_out: bool = False, # (fan_in, fan_out) 구조 여부\n",
+    "        # 가중치(weight) 행렬의 형태가 어떻게 정의되어 있는지에 따라 설정하는 플래그\n",
+    "        # 일반적인 Linear 레이어에서는 가중치 행렬이 (out_features, in_features) 크기를 가집니다. 이때는 False\n",
+    "        # 일부 모델에서 가중치 행렬이 (in_features, out_features)로 저장될 수 있는데 이때는 True\n",
+    "        fan_in_fan_out: bool = False,\n",
     "        merge_weights: bool = True, # 가중치 병합 여부\n",
     "        **kwargs\n",
     "    ):\n",
     "        nn.Linear.__init__(self, in_features, out_features, **kwargs) # nn.Linear 초기화\n",
-    "        "
+    "        LoRALayer.__init__(self, r=r, lora_alpha=lora_alpha, lora_dropout=lora_dropout, merge_weights=merge_weights) # LoRALayer 초기화\n",
+    "        \n",
+    "        if r > 0: # Low-rank 차원이 0보다 큰 경우 학습 가능한 파라미터 설정\n",
+    "            self.lora_A = nn.Parameter(self.weight.new_zeros((r, in_features))) # A 행렬\n",
+    "            self.lora_B = nn.Parameter(self.weight.new_zeros((out_features, r))) # B 행렬\n",
+    "            self.scaling = self.lora_alpha / self.r # 스케일링 계산\n",
+    "            self.weight.requires_grad = False # 사전 학습된 weight 고정\n",
+    "        self.reset_parameters() # 파라미터 초기화\n",
+    "        if fan_in_fan_out:\n",
+    "            self.weight.data = self.weight.data.transpose(0, 1) # fan_in_fan_out일 경우 weight 전치\n",
+    "        \n",
+    "    def reset_parameters(self):\n",
+    "        nn.Linear.reset_parameters(self) #기본 파라미터 초기화\n",
+    "        if hasattr(self, 'lora_A'):\n",
+    "            nn.init.kaiming_uniform_(self.lora_A, a=math.sqrt(5)) # He 초기화 방식으로 A 초기화\n",
+    "            nn.init.zeros_(self.lora_B) # B는 0으로 초기화\n",
+    "\n",
+    "    # LoRA 가중치와 기존 가중치의 병합 상태를 관리하는 역할\n",
+    "    def train(self, mode: bool = True):\n",
+    "        def T(w):\n",
+    "            return w.transpose(0, 1) if self.fan_in_fan_out else w # fan_in_fan_out이면 전치\n",
+    "        nn.Linear.train(self, mode) # 기본 train 모드\n",
+    "        # 병합된 가중치를 해제하여 LoRA가 학습될 수 있게 함\n",
+    "        if mode:\n",
+    "            if self.merge_weights and self.merged:\n",
+    "                if self.r > 0:\n",
+    "                    self.weight.data -= T(self.lora_B @ self.lora_A) * self.scaling # 병합된 가중치 해제\n",
+    "                self.merged = False # 병합 해제 상태로 변경\n",
+    "        #추론 모드에서는 가중치를 병합하여 성능을 최적화\n",
+    "        else:\n",
+    "            if self.merge_weights and not self.merged:\n",
+    "                if self.r > 0:\n",
+    "                    self.weight.data += T(self.lora_B @ self.lora_A) * self.scaling # 가중치 병합\n",
+    "                self.merged = True # 병합 상태로 변경\n",
+    "\n",
+    "    # LoRA의 저차원 행렬을 활용해 가중치에 변화를 주는 과\n",
+    "    def forward(self, x: torch.Tensor):\n",
+    "        def T(w):\n",
+    "            return w.transpose(0, 1) if self.fan_in_fan_out else w # fan_in_fan_out이면 전치\n",
+    "        #학습모드\n",
+    "        if self.r > 0 and not self.merged:\n",
+    "            result = F.linear(x, T(self.weight), bias=self.bias) # 기본 선형 변환\n",
+    "            #lora_A는 입력을 저차원으로 변환하고, lora_B는 다시 저차원 변환된 결과를 출력 차원으로 확장\n",
+    "            result += (self.lora_dropout(x) @ self.lora_A.transpose(0, 1) @ self.lora_B.transpose(0, 1)) * self.scaling # LoRA 적용 후 결과 반환\n",
+    "            return result\n",
+    "        #추론모드\n",
+    "        else:\n",
+    "            return F.linear(x, T(self.weight), bias=self.bias) # LoRA가 적용되지 않은 경우 기본 선형 변환\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**LoRA에서 `lora_A`와 `lora_B`가 임베딩과 Linear 레이어에서 서로 다르게 0으로 초기화되는 이유**는 **각 레이어에서 입력과 출력이 처리되는 방식**에 따른 차이입니다. 이 초기화 방식은 모델의 학습 안정성을 유지하면서, **저차원 변환**이 어떻게 **점진적으로 학습에 반영**될지를 제어하기 위한 것입니다. 다음은 그 이유에 대한 최종 정리입니다.\n",
+    "\n",
+    "### 1. **Embedding 레이어에서 `lora_A`가 0으로 초기화되는 이유**\n",
+    "\n",
+    "- **입력 차원의 변화를 늦추기 위함**: `lora_A`는 **입력 차원**에서 작동하며, 입력 데이터를 **저차원 공간으로 변환**합니다. 임베딩 레이어에서는 **각 단어** 또는 **토큰**에 해당하는 임베딩 벡터가 학습됩니다.\n",
+    "- **초기 학습에서는 기존 임베딩 가중치에 의존**: `lora_A`를 0으로 초기화하면, **초기 학습 단계에서는 기존의 사전 학습된 임베딩 가중치만** 사용됩니다. 이는 기존 임베딩에 변화가 없도록 하여 학습 초기에 **기존 임베딩 가중치에 의존**하게 만듭니다.\n",
+    "- **점진적인 저차원 변환 반영**: 학습이 진행되면서 `lora_A`가 업데이트되고, 이후에는 저차원 변환이 점차적으로 **입력 차원에 반영**되기 시작합니다.\n",
+    "\n",
+    "> **핵심 이유**: 임베딩 레이어에서는 **입력 차원**에서의 변화를 천천히 반영하기 위해 `lora_A`를 0으로 초기화합니다. 이는 학습 초기에는 기존 임베딩을 유지하고, 학습이 진행되면서 점진적으로 저차원 변화를 반영하도록 설계된 것입니다.\n",
+    "\n",
+    "### 2. **Linear 레이어에서 `lora_B`가 0으로 초기화되는 이유**\n",
+    "\n",
+    "- **출력 차원의 변화를 늦추기 위함**: `lora_B`는 **출력 차원**에서 작동하며, 저차원에서 변환된 결과를 다시 **고차원 공간으로 확장**합니다.\n",
+    "- **초기 학습에서는 기존 Linear 가중치에 의존**: `lora_B`를 0으로 초기화하면, **저차원 변환이 출력에 반영되지 않으므로**, 초기 학습 단계에서는 기존의 Linear 가중치에 의존하게 됩니다.\n",
+    "- **저차원 변환이 출력에 미치는 영향을 점진적으로 반영**: 학습이 진행되면서 `lora_B`가 업데이트되고, 이후에는 저차원 변환이 점차적으로 **출력 차원에 반영**되기 시작합니다.\n",
+    "\n",
+    "> **핵심 이유**: Linear 레이어에서는 **출력 차원**에서의 변화를 천천히 반영하기 위해 `lora_B`를 0으로 초기화합니다. 이는 학습 초기에는 기존의 출력 가중치를 유지하고, 이후 점진적으로 저차원 변화를 출력에 반영하는 방식입니다.\n",
+    "\n",
+    "### 최종 요약:\n",
+    "- **Embedding 레이어**에서는 **입력 차원의 변화를 천천히 반영**하기 위해 **`lora_A`를 0으로 초기화**하여, 학습 초기에는 기존 임베딩 가중치에 의존하게 하고, 이후 학습 단계에서 저차원 변환을 점진적으로 반영합니다.\n",
+    "- **Linear 레이어**에서는 **출력 차원의 변화를 천천히 반영**하기 위해 **`lora_B`를 0으로 초기화**하여, 학습 초기에는 기존 Linear 가중치에 의존하게 하고, 이후 학습 단계에서 저차원 변환이 출력에 점진적으로 반영되도록 합니다.\n",
+    "\n",
+    "이는 **학습 초기의 안정성을 유지**하고, **기존의 사전 학습된 가중치를 효과적으로 활용**하기 위해 설계된 전략입니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
