상속 모듈 오타 수정

--- a/torchtune-model.ipynb
+++ b/torchtune-model.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/petersong/Library/Caches/pypoetry/virtualenvs/lora-aiDrGkUc-py3.11/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "from typing import List\n",
@@ -23,11 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class LoRALinear(nn.modules, AdapterModule):\n",
+    "class LoRALinear(nn.Module, AdapterModule):\n",
     "    '''\n",
     "    LoRA (Low-Rank Adaptation) 선형 계층을 정의하는 클래스.\n",
     "    LoRA는 대규모 언어 모델의 적응을 위한 기법으로, 저차원 행렬 분해를 통해 적은 파라미터로 학습을 가능하게 한다.\n",
