--- a/llm-simple-lora-customizable-pipeline-train-infer.ipynb
+++ b/llm-simple-lora-customizable-pipeline-train-infer.ipynb
@@ -389,7 +389,10 @@
     "        self.token_info = {\"padding\" :\"longest\", # 배치는 가장 긴 시퀀스의 길이가 될 것임\n",
     "                           \"max_length\" : 256, # 로컬에서 1024로 훈련, kaggle 노트북 내에서 훈련하기 위해 낮춤\n",
     "                           \"truncation\": True,\n",
-    "                           \"pad_to_multiple_of\" : 512 # 현대 GPU가 512의 배수로 가장 빠르다고 들었는데, 사실인가요?\n",
+    "                           \"pad_to_multiple_of\" : 512 \n",
+    "                           # 패딩을 특정 값의 배수로 맞추는 옵션. \n",
+    "                           # VIDIA의 Tensor Cores와 같은 하드웨어 가속기에서는, 연산 속도를 최적화하기 위해 배치 크기나 입력 길이가 특정 배수로 정렬될 때 더 나은 성능을 발휘하는 경우가 많습니다. \n",
+    "                           # 이때 pad_to_multiple_of를 사용하여 입력을 정렬할 수 있습니다\n",
     "                          }\n",
     "\n",
     "        # 훈련과 관련된 매개변수\n",
@@ -409,36 +412,44 @@
     "        self.scheduler_name = \"OneCycleLR\"\n",
     "        self.steps_per_epochs = -1 # 자동으로 덮어씌워짐\n",
     "        self.scheduler_params={\n",
-    "                            #학습률의 최대값을 설정합니다. 이는 optimizer_params에서 정의된 학습률을 사용\n",
+    "                              #학습률의 최대값을 설정합니다. 이는 optimizer_params에서 정의된 학습률을 사용\n",
     "                              \"max_lr\":self.optimizer_params[\"lr\"] if type(self.optimizer_params)==dict else self.optimizer_params[-1][\"lr\"],\n",
-    "                               #초기 학습률을 max_lr로 나누는 값입니다. 초기 학습률은 max_lr / div_factor로 설정\n",
+    "                               #초기 학습률을 max_lr / div_factor로 나눕니다. 초기에는 작은 학습률로 시작하여 안정적으로 모델을 학습시키고, 이후 학습률을 증가시키는 전략\n",
     "                               \"div_factor\":10,\n",
     "                              \"steps_per_epoch\": self.steps_per_epochs,\n",
-    "                              #최종 학습률을 max_lr로 나누는 값입니다. 최종 학습률은 max_lr / final_div_factor로 설정\n",
+    "                              #학습이 완료될 때 최종 학습률을 max_lr / final_div_factor로 나눕니다. 이는 학습률을 최종적으로 조정하는 데 사용됩니다.\n",
     "                              \"final_div_factor\":1e2, #1e2\n",
     "                              #학습률 조정 전략을 설정합니다. \"cos\"는 코사인 곡선을 사용하여 학습률을 조정합니다.\n",
     "                              \"anneal_strategy\":\"cos\", #\"cos\"\n",
     "                              #세 단계 학습률 조정을 사용할지 여부를 설정합니다. 세 단계 학습률 조정은 학습률을 세 단계로 나누어 조정합니다.\n",
     "                               \"three_phase\" : False,\n",
-    "                              #학습률 조정이 시작되는 지점을 설정합니다. 이 값은 학습률 조정이 시작되는 지점을 나타냅니다.\n",
-    "                              \"pct_start\":0.1, #0.3\n",
+    "                              #학습률 조정이 시작되는 지점을 설정합니다. 이 값은 학습률 조정이 시작되는 지점을 나타냅니다. \n",
+    "                              #True로 설정하면: 학습의 마지막 단계에서 학습률을 극도로 낮게 조정하여 모델이 안정적으로 최종 가중치에 수렴할 수 있음\n",
+    "                              \"pct_start\":0.1, # 기본값 0.3으로 전체 학습 중 학습률이 증가하는 단계가 어느 시점에서 시작할지를 설정합니다. 0.1로 설정되면, 학습의 10%에서 학습률이 최대에 도달하게 됩\n",
     "                              #전체 학습 에포크 수를 설정합니다. max_epochs의 값을 사용\n",
     "                              \"epochs\": self.max_epochs}\n",
-    "        \n",
+    "        '''\n",
+    "        학습률 스케줄링의 변화 예시\n",
+    "        **max_lr=1e-2, div_factor=20, final_div_factor=1e3로 설정하면:\n",
+    "        초기 학습률이 1e-2 / 20 = 5e-4로 매우 낮고, 학습 후반부에서는 1e-2 / 1e3 = 1e-5로 수렴하게 됩니다. 이는 매우 천천히 학습이 이루어지는 방식이며, 모델이 안정적으로 수렴할 가능성이 높습니다.\n",
+    "        **max_lr=1e-1, div_factor=5, final_div_factor=1e2로 설정하면:\n",
+    "      초기 학습률이 2e-2로 상당히 크고, 최종 학습률도 1e-3로 높습니다. 이는 빠른 학습을 목표로 하며, 불안정할 수 있지만 최적화 속도는 빠를 수 있습니다.\n",
+    "        '''\n",
     "        \n",
     "        self.eval_on_train = False # 과적합을 모니터링하기 위해 훈련 세트에서 정확한 메트릭을 계산하고 싶을 수 있음\n",
     "        self.batch_size = 1 # 작게 시작합시다\n",
     "        self.gradient_accumulation = 16 // self.batch_size # 낮은 배치 크기로 훈련하지만 몇 개의 샘플에서 그래디언트를 계산할 수 있음\n",
     "        self.mixed_precision = True\n",
-    "        self.num_workers = 2 # kaggle 환경에서는 num_workers를 낮게 유지해야 한다고 생각함\n",
-    "        self.pin_memory = True\n",
+    "        self.num_workers = 2 # 데이터 로더에서 병렬 처리를 위해 2개의 작업자 사용\n",
+    "        self.pin_memory = True # GPU에 데이터를 미리 로드하여 데이터 전송 속도를 높임\n",
     "        self.clip_value = 10.0\n",
     "\n",
     "        # 로그와 관련된 매개변수\n",
-    "        self.verbose = 1 # 경쟁 메트릭을 얼마나 자주 계산하고 싶으신가요?\n",
-    "        self.save_path = \"/kaggle/working/\"\n",
+    "        self.verbose = 1 # 훈련 도중 얼마나 자주 로그를 출력할 것인지. 0일 경우 로그 출력 안함\n",
+    "        self.save_path = \"working/\" # 훈련 중 저장할 \n",
     "\n",
-    "PATH_TO_DATA = \"/kaggle/input/learning-agency-lab-automated-essay-scoring-2\"\n",
+    "# 학습과 테스트를 위한 데이터셋 경로 설정\n",
+    "PATH_TO_DATA = \"input/learning-agency-lab-automated-essay-scoring-2\"\n",
     "exp_config = Config()"
    ]
   },
@@ -497,18 +508,15 @@
     "    \n",
     "class LALDataset(Dataset):\n",
     "    \"\"\"\n",
-    "    요즘 데이터셋을 만드는 더 간단한 방법이 있습니다 (datasets 라이브러리 사용 등).\n",
-    "    하지만 저는 실제로 무슨 일이 일어나는지 더 잘 이해할 수 있기 때문에 이렇게 정의하는 것을 선호합니다.\n",
-    "    여기 데이터셋은 매우 간단하지만, 더 많은 사용자 정의가 가능합니다.\n",
-    "    \n",
-    "    이렇게 하지 않고 더 최근의 방법을 사용하는 것이 좋은 이유가 있다면 알려주세요!\n",
+    "    LALDataset 클래스: PyTorch Dataset을 상속받아 데이터를 모델에 맞게 준비하는 클래스를 정의합니다. \n",
+    "    각 데이터셋의 정의는 학습 및 추론에서 어떻게 데이터를 사용해야 할지 결정하는 중요한 부분입니다.\n",
     "    \"\"\"\n",
     "    def __init__(self, df, config, inference, remove=True):\n",
     "        \"\"\"\n",
     "        df: pandas 데이터프레임\n",
-    "        config: 실험 구성\n",
-    "        inference (bool): 추론 모드인가요?\n",
-    "        remove (bool): 올바르게 결합되지 않을 수 있는 불필요한 열을 제거해야 하나요?\n",
+    "        config: 학습 및 토큰화 관련된 설정 값\n",
+    "        inference (bool): 추론 모드인지 여부를 나타냄\n",
+    "        remove (bool): 학습에 필요하지 않은 열을 제거할지 여부를 결정\n",
     "        \"\"\"\n",
     "        self.df = df\n",
     "        # tokenizer는 datacollator에서 사용되므로 정의되어야 함\n",
@@ -518,24 +526,33 @@
     "        self.remove = remove\n",
     "        \n",
     "    def __len__(self):\n",
+    "        \"\"\"\n",
+    "        데이터셋의 전체 크기를 반환\n",
+    "        \"\"\"\n",
     "        return len(self.df)\n",
     "    \n",
     "    def __getitem__(self, row_idx):\n",
     "        \n",
     "        full_text = self.df.loc[row_idx, \"full_text\"]\n",
-    "        \n",
+    "        # self.tokenizer()를 사용해 해당 텍스트를 토큰화하고, 주어진 max_length와 truncation 설정에 맞춰 조정\n",
     "        tokenized_text = self.tokenizer(full_text,\n",
     "                                        return_offsets_mapping=False, # 주로 엔티티 인식을 위해 필요\n",
     "                                        truncation=self.config.token_info[\"truncation\"],\n",
     "                                        max_length=self.config.token_info[\"max_length\"])\n",
     "        \n",
     "        labels = self.df.loc[row_idx, \"score\"]\n",
-    "            \n",
+    "        # df에서 해당 행의 점수(레이블)를 가져와 labels로 저장\n",
     "        # 여기서 eos 토큰을 끝에 추가하여 CLS 토큰으로 작동하게 함\n",
-    "        # GPT와 같은 모델은 인과적 attention을 가지므로 이것이 마지막 토큰이어야 함\n",
+    "        # 모델이 인과적 Attention을 가지는 GPT 계열 모델이므로, 입력 텍스트의 마지막에 eos 토큰을 추가하여 CLS 역할을 하게 합니다\n",
     "        tokenized_text.input_ids.append(self.tokenizer.eos_token_id)\n",
     "        tokenized_text.attention_mask.append(1)\n",
-    "       \n",
+    "        \"\"\"\n",
+    "        토큰화: 입력 문장이 주어지면 토크나이저를 사용해 input_ids 리스트로 변환됩니다. 예를 들어, \"Hello, world!\"가 [100, 200, 300]으로 변환됩니다.\n",
+    "        EOS 토큰 추가: 토크나이저에서 미리 정의된 EOS 토큰(eos_token_id)을 input_ids 리스트에 추가합니다. 예를 들어, [100, 200, 300] -> [100, 200, 300, 500].\n",
+    "        Attention Mask 확장: attention_mask는 각 토큰에 대해 1로 설정하여 모델이 모든 토큰을 학습하도록 합니다. 여기서 EOS 토큰을 추가했으므로, \n",
+    "        이에 대한 Attention Mask도 1을 추가하여 [1, 1, 1] -> [1, 1, 1, 1]로 확장됩니다.\n",
+    "        \"\"\"\n",
+    "\n",
     "        out_dict = {\n",
     "                \"input_ids\": tokenized_text.input_ids,\n",
     "                \"attention_mask\": tokenized_text.attention_mask,\n",
@@ -544,10 +561,7 @@
     "        return out_dict\n",
     "\n",
     "\n",
-    "def define_loader(dataset,\n",
-    "                  config,\n",
-    "                  inference,\n",
-    "                 ):\n",
+    "def define_loader(dataset, config, inference):\n",
     "    \"\"\"\n",
     "    훈련 및 테스트를 위한 dataloader 생성\n",
     "    \"\"\"\n",
@@ -555,20 +569,30 @@
     "    pin_memory = config.pin_memory\n",
     "    \n",
     "    # collate_fn = None\n",
-    "    # 여기서는 기본 data collator를 사용\n",
+    "    # data collator를 사용해 토큰화된 데이터를 패딩하는 방법을 사용\n",
+    "    \"\"\"\n",
+    "    DataCollatorWithPadding는 토큰화된 데이터를 동일한 길이로 맞춰주는 역할을 합니다. \n",
+    "    이는 특히 배치(batch) 처리를 할 때 중요합니다. \n",
+    "    왜냐하면, NLP 모델의 입력은 일반적으로 고정된 길이여야 하고, \n",
+    "    텍스트 데이터는 길이가 다양하기 때문에 짧은 텍스트들은 패딩을 통해 길이를 맞춰줘야 합니다\n",
+    "    \"\"\"\n",
     "    collate_fn = DataCollatorWithPadding(tokenizer=dataset.tokenizer,\n",
     "                                         padding=config.token_info[\"padding\"],\n",
     "                                         max_length=config.token_info[\"max_length\"],\n",
     "                                         pad_to_multiple_of=config.token_info[\"pad_to_multiple_of\"]\n",
     "                                    )\n",
+    "    #padding이 True일 경우 모든 배치에서 가장 긴 문장 또는 옵션에 의해 결정되나\n",
+    "    #longest는 배치 내에서 긴 문장에 따라 적용되어 각 문장에 불필요한 패딩을 최소화 할 수 있음\n",
     "\n",
-    "\n",
+    "    # Dataset을 받아 DataLoader로 변환\n",
     "    loader = DataLoader(\n",
     "                dataset,\n",
     "                batch_size=config.batch_size,\n",
     "                shuffle=not inference,\n",
     "                drop_last=not inference,\n",
+    "                # 데이터 로드를 위한 병렬 처리 워커 수\n",
     "                num_workers=num_workers,\n",
+    "                # GPU에 데이터를 미리 로드하여 데이터 전송 속도를 높임\n",
     "                pin_memory=pin_memory, \n",
     "                collate_fn=collate_fn,\n",
     "                # worker_init_fn=worker_init_fn,\n",
@@ -578,14 +602,20 @@
     "\n",
     "def get_dataset_and_loader(df, config, inference, remove=True):\n",
     "    \"\"\"\n",
-    "    데이터셋과 dataloader 반환\n",
+    "    LALDataset 객체 생성: 주어진 데이터프레임과 설정을 사용해 데이터셋을 만듭니다.\n",
+    "    DataLoader 생성: 만들어진 데이터셋을 기반으로 데이터 로더를 반환합니다. \n",
+    "    학습 및 추론에서 사용되는 데이터셋과 데이터 로더를 모두 반환\n",
     "    \"\"\"\n",
     "    dataset = LALDataset(df, config, inference, remove=remove)\n",
     "    loader = define_loader(dataset, config, inference)\n",
     "    return dataset, loader\n",
     "\n",
     "def create_loaders(df, train_idx, valid_idx, config, eval_on_train):\n",
-    "    \n",
+    "    \"\"\"\n",
+    "    주어진 학습 및 검증 데이터 인덱스(train_idx, valid_idx)에 따라 학습과 검증용 데이터셋을 나누고, 각각의 데이터 로더를 생성합니다.\n",
+    "    eval_on_train 옵션**: 만약 eval_on_train이 True일 경우, 학습 데이터도 검증용으로 사용할 수 있도록 추가적으로 검증용 데이터 로더(train_aux_dl)를 생성합니다.\n",
+    "    최종적으로 학습용(train_dl)과 검증용(valid_dl) 데이터 로더를 반환하고, 평가할 데이터 로더와 이름(eval_loaders, eval_names)도 함께 반환합니다.\n",
+    "    \"\"\"\n",
     "    # 추론을 위해 더 큰 max length 설정 가능\n",
     "    valid_config = copy.deepcopy(config)\n",
     "    valid_config.token_info['max_length'] = config.token_info['max_length']\n",
