네트워크 설정

--- a/llm-simple-lora-customizable-pipeline-train-infer.ipynb
+++ b/llm-simple-lora-customizable-pipeline-train-infer.ipynb
@@ -618,6 +618,7 @@
     "    \"\"\"\n",
     "    # 추론을 위해 더 큰 max length 설정 가능\n",
     "    valid_config = copy.deepcopy(config)\n",
+    "    # 추론에서는 더 긴 문장을 처리 하거나 짧게 할 수 있음. 이를 위해 max_length를 조정 할 수 있으나 여기서는 동일하게 설정.\n",
     "    valid_config.token_info['max_length'] = config.token_info['max_length']\n",
     "    \n",
     "    _, train_dl = get_dataset_and_loader(df=df.iloc[train_idx].reset_index(drop=True),\n",
@@ -628,7 +629,7 @@
     "    _, valid_dl = get_dataset_and_loader(df=df.iloc[valid_idx].reset_index(drop=True),\n",
     "                                        config=valid_config,\n",
     "                                        inference=True)\n",
-    "\n",
+    "    # 학습 데이터를 검증용으로 사용하기 위해 추가적인 데이터 로더 생성\n",
     "    if eval_on_train:\n",
     "        _, train_aux_dl = get_dataset_and_loader(df=df.iloc[train_idx].reset_index(drop=True),\n",
     "                                                config=valid_config,\n",
@@ -695,7 +696,7 @@
     "\n",
     "class CustomLLM(torch.nn.Module):\n",
     "    \"\"\"\n",
-    "    사용자 정의 아키텍처를 설정할 수 있는 클래스입니다.\n",
+    "    LORA를 적용한 사용자 정의 아키텍처(Custom LLM)를 설정하는 네트워크 구조를 정의하는 클래스입니다.\n",
     "    \"\"\"\n",
     "    def __init__(self, cfg, eos_token_id):\n",
     "        super().__init__()\n",
@@ -704,13 +705,15 @@
     "        self.model_config = AutoConfig.from_pretrained(\n",
     "                cfg.architecture[\"backbone\"],\n",
     "            )  # 사전 학습된 모델의 구성 불러오기\n",
-    "\n",
+    "        # Identity()는 단순한 레이어로, 입력값을 그대로 반환합니다. \n",
+    "        # 입력값에 아무런 변경이나 연산을 가하지 않고 그대로 출력하는 구조\n",
     "        self.activation = torch.nn.Identity()  # 기본 활성화 함수 설정\n",
     "        # 네트워크의 backbone 설정\n",
     "        self.backbone  = AutoModelForCausalLM.from_pretrained(cfg.architecture[\"backbone\"],\n",
     "                                                                    device_map=\"cpu\",  # 모델을 로드할 장치\n",
     "                                                                    load_in_4bit=False,  # 4비트 로드 설정\n",
     "                                                                    torch_dtype=torch.float32,  # 데이터 타입 설정\n",
+    "                                                                    # 모델을 로드할 때 추가적인 설정을 전달할 수 있는 딕셔너리\n",
     "                                                                    **cfg.architecture[\"params\"])\n",
     "        # 사용자 정의 head를 사용하기 위해 기존 head 제거\n",
     "        self.backbone.lm_head = torch.nn.Identity()\n",
