--- a/llm-simple-lora-customizable-pipeline-train-infer.ipynb
+++ b/llm-simple-lora-customizable-pipeline-train-infer.ipynb
@@ -16,16 +16,6 @@
    "source": [
     "# Customizable pytorch LLM training pipeline\n",
     "\n",
-    "## 왜 이 노트북을 사용하나요?\n",
-    "\n",
-    "많은 사람들처럼, 저는 LLMs에 대한 기술과 이해를 향상시키려고 노력하고 있습니다.\n",
-    "매일 새로운 것들이 등장하고 있으며, 따라가기가 어렵습니다.\n",
-    "몇 줄의 코드로 LLM을 미세 조정할 수 있는 훌륭한 리소스들이 많이 있습니다 (transformers, trl, auto-train, ...).\n",
-    "하지만 이러한 준비된 라이브러리를 사용할 때는 많이 배우는 느낌이 들지 않습니다.\n",
-    "그래서 저는 최종 사용자에게 모든 세부 사항을 가능한 한 많이 보여주고 사용자 정의할 수 있는 간단한 독립형 노트북을 제안합니다. 물론 바퀴를 다시 발명하지 않고요.\n",
-    "\n",
-    "제가 말했듯이, 저는 현재 이 모든 것을 배우고 있으며, 제 파이프라인에 오류나 쉬운 개선점이 있을 수 있습니다. 발견하시면 주저하지 말고 알려주셔서 모두가 개선할 수 있도록 도와주세요!\n",
-    "\n",
     "## 사용자 정의를 위한 아이디어\n",
     "\n",
     "이 노트북을 넘어서는 몇 가지 아이디어:\n",
@@ -35,18 +25,8 @@
     "- 다른 pooling method 시도하기\n",
     "\n",
     "## 아직 작동하지 않는 것들\n",
-    "이것이 어떻게 작동할 수 있는지 알려주세요!\n",
-    "\n",
     "- float16, bfloat16, 또는 int8, int4로 LLM을 로드하고 훈련하기: 이 작업을 수행하기 위해 파이프라인 내부에서 무엇을 해야 하는지 아직 모르겠습니다 (메모리 필요량 측면에서 모든 것이 바뀔 것입니다).\n",
-    "- 모델을 저장할 때 메모리를 절약하기 위해 peft weights + custom layers만 저장하기\n",
-    "\n",
-    "## 탐색할 다음 단계\n",
-    "비슷한 노트북을 탐색하고 공유할 시간을 찾으려고 합니다:\n",
-    "- qlora\n",
-    "- torchtune\n",
-    "- 그 외에 무엇이 있을까요? 댓글로 아이디어를 공유해주세요!\n",
-    "\n",
-    "**Happy Kaggling!**"
+    "- 모델을 저장할 때 메모리를 절약하기 위해 peft weights + custom layers만 저장하기"
    ]
   },
   {
@@ -385,6 +365,22 @@
     "                            \"target_modules\": [\"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\",\n",
     "                                               \"gate_proj\", \"up_proj\", \"down_proj\",],\n",
     "                           }\n",
+    "        \"\"\"\n",
+    "        [target_modules]\n",
+    "        q_proj, k_proj, v_proj, o_proj:\n",
+    "        이들은 트랜스포머 모델의 Self-Attention 메커니즘에서 가장 중요한 파트입니다.\n",
+    "        각각 쿼리(query), 키(key), 밸류(value), 그리고 아웃풋 프로젝션을 의미합니다. \n",
+    "        이들은 입력 데이터의 정보를 인코딩하고, Attention 스코어를 계산하는 데 사용됩니다.\n",
+    "        이러한 부분들은 주로 모델이 정보를 학습하는 핵심 파트이기 때문에, LoRA를 적용하면 효율적인 미세 조정을 수행할 수 있습니다.\n",
+    "      \n",
+    "        gate_proj, up_proj, down_proj:\n",
+    "        이 모듈들은 주로 Feed Forward Network에서 사용됩니다. \n",
+    "        트랜스포머 모델의 각 레이어에는 Self-Attention 다음에 Feed-Forward 네트워크가 있습니다. \n",
+    "        이 과정에서 입력을 더 높은 차원으로 확장한 후 다시 줄이는 프로젝션들이 사용됩니다.\n",
+    "        up_proj: 입력 차원을 확장하는 부분.\n",
+    "        down_proj: 확장된 차원을 다시 줄이는 부분.\n",
+    "        gate_proj: 게이트 연산을 수행하는 모듈로, 모델의 활성화나 FFN 네트워크에서 사용됩니다.\n",
+    "        \"\"\"\n",
     "        \n",
     "        self.token_info = {\"padding\" :\"longest\", # 배치는 가장 긴 시퀀스의 길이가 될 것임\n",
     "                           \"max_length\" : 256, # 로컬에서 1024로 훈련, kaggle 노트북 내에서 훈련하기 위해 낮춤\n",
@@ -719,17 +715,22 @@
     "        self.backbone.lm_head = torch.nn.Identity()\n",
     "\n",
     "        if cfg.remove_layers is not None:\n",
-    "            # 마지막 레이어 제거: 불필요한 레이어 제거\n",
+    "            # 마지막 레이어 제거: 불필요한 마지막 - cfg.remove_layers 만큼 제거\n",
     "            self.backbone.layers = self.backbone.model.layers[:-cfg.remove_layers]          \n",
     "        \n",
+    "        # 모델의 특정 레이어와 임베딩 레이어를 고정(freeze)하여 학습 중에 업데이트되지 않도록 하는 것\n",
     "        if hasattr(cfg, \"num_layers_to_freeze\"):\n",
     "            print(f\"freezing {cfg.num_layers_to_freez} layers.\")\n",
     "            if cfg.num_layers_to_freeze > 0:\n",
     "                if cfg.freeze_embeddings:\n",
-    "                    # 임베딩 레이어 고정\n",
+    "                    # 전체 임베딩 레이어 고정\n",
+    "                    # 파인튜닝시 사전 학습된 임베딩 레이어는 이미 충분히 학습되었기 때문에, 고정한 상태로 사용해도 성능이 충분히 좋을 수 \n",
     "                    for param in self.backbone.embed_tokens.parameters():\n",
     "                        param.requires_grad = False\n",
     "                # 첫 번째 레이어 고정: 나머지 마지막 레이어만 훈련\n",
+    "                # 모델의 처음 몇 개의 레이어는 보통 기본적인 패턴을 학습하고 있습니다. \n",
+    "                # 예를 들어, 언어 모델의 초기 레이어들은 텍스트의 일반적인 특징(어휘, 문법 등)을 학습하게 됩\n",
+    "                # 반면, 마지막 레이어들은 특정한 태스크에 맞춰 학습하는 것이 중요합니다. 따라서, 미세 조정에서는 보통 마지막 몇 개의 레이어만 학습하게 됨\n",
     "                for layer in self.backbone.model.layers[:cfg.num_layers_to_freeze]:\n",
     "                    for param in layer.parameters():\n",
     "                        param.requires_grad = False\n",
@@ -742,9 +743,12 @@
     "                r=cfg.lora_config[\"r\"],\n",
     "                lora_alpha=cfg.lora_config[\"lora_alpha\"],\n",
     "                lora_dropout=cfg.lora_config[\"lora_dropout\"],\n",
+    "                # LoRA에서 target modules은 LoRA 모듈을 어떤 레이어 또는 모듈에 적용할지를 결정하는 설정입니다. \n",
+    "                # LoRA는 모델 전체가 아닌 특정한 부분에만 적용하는 것이 일반적입니다.\n",
     "                target_modules=cfg.lora_config[\"target_modules\"],\n",
     "            )\n",
-    "            \n",
+    "            # get_peft_model(self.backbone, peft_config)**는 기존의 백본 모델에 LoRA 설정을 적용하는 함수입니다. \n",
+    "            # 백본 모델의 구조와 가중치는 유지되며, 추가된 LoRA 모듈만 학습을 수행하여 효율적인 미세 조정을 가능하게 합\n",
     "            self.backbone = get_peft_model(self.backbone, peft_config)\n",
     "        else:\n",
     "            print(\"NOT USING LORA\")\n",
